k8s/manifests/rag/rag-api/kustomize/base/resources/admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-admin
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: rag-admin.cnapcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rag-admin
                port:
                  number: 80
  tls:
    - secretName: cnapcloud-com-tls
      hosts:
        - rag-admin.cnapcloud.com
